--- a/CSS/main_style.css
+++ b/CSS/main_style.css
@@ -1,15 +1,12 @@
-.head {
-       float: right;
-   }
-   .textHead {
-    width: 100%;
-  font-family: Arial;
-  font-size: 20px;
-  text-align: center;
-  color: #F38181;
+   .header {
+       background: #fff;
+       width: 100%;
+       height: 65px;
+       margin: 0px;
+       padding: 0px;
    }
    .wrapper { 
-     padding-top:50px;
+     padding-top:30px;
     display: grid; 
     grid-template-columns: repeat(3, 1fr); 
    grid-template-columns: 350px 350px 350px;
@@ -17,6 +14,14 @@
    justify-content: center;
    
 } 
+   .icon {
+      height: 110px;
+      width: 110px;
+      margin-left: 115px;
+      margin-top: 30px;
+      align-items: center;
+      
+   }
    .leftBlock {
     margin-top: 180px;
     background: #fff;
@@ -44,11 +49,26 @@
    .text {
   width: 100%;
   display: block;
-  margin-top: 220px;
+  margin-top: 80px;
   font-family: Arial;
   font-size: 18px;
   text-align: center;
   color: #C3BCBC;
+   }
+   
+   .headText {
+      font-family: Arial; 
+      font-size: 18px;
+      color: #F8ADAD;
+      vertical-align: middle;
+      line-height: 65px;  
+      float: right;
+      margin-right:15px;
+      text-decoration: none;
+      -webkit-transition: all 0.3s;
+   }
+   .headText:hover {
+       color: #F38181;
    }
    
    .login100-form-btn {
