--- a/CSS/words_style.css
+++ b/CSS/words_style.css
@@ -1,5 +1,9 @@
-.head {
-       float: right;
+   .header {
+       background: #fff;
+       width: 100%;
+       height: 65px;
+       margin: 0px;
+       padding: 0px;
    }
    .textHead {
     width: 100%;
@@ -9,7 +13,7 @@
   color: #F38181;
    }
    .wrapper { 
-     margin-top:160px;
+     margin-top:130px;
     display: grid; 
     grid-template-columns: repeat(4, 1fr); 
    grid-template-columns: 300px 300px 300px 300px;
@@ -31,16 +35,36 @@
     width: 300px;
     float: left;
    }
-   
+   .icon {
+       width: 85px;
+       height: 85px;
+       margin-top: 15px;
+       margin-left: 200px;
+   }
    .text {
   width: 100%;
-  margin-top: 130px;
+  margin-top: 25px;
   display: block;
   font-family: Arial;
   font-size: 23px;
   text-align: center;
   color: #C3BCBC;
   margin-bottom: 5px;
+   }
+   
+   .headText {
+      font-family: Arial; 
+      font-size: 18px;
+      color: #F8ADAD;
+      vertical-align: middle;
+      line-height: 65px;  
+      float: right;
+      margin-right:15px;
+      text-decoration: none;
+      -webkit-transition: all 0.3s;
+   }
+   .headText:hover {
+       color: #F38181;
    }
    
    .login100-form-btn {
