learn.php, progress.php
Изменена система изучения слов, добавлен модуль прогресса по изученным словам (частично)
+ Небольшие изменения

--- a/CSS/learn_style.css
+++ b/CSS/learn_style.css
@@ -1,7 +1,7 @@
    .welcomeBlock {
-    width: 600px; /* Ширина элемента в пикселах */
+    width: 600px; 
     height: 600px;
-    margin: auto; /* Выравниваем по центру */
+    margin: auto; 
     margin-top: 85px;
     background: #fff;
     border-radius: 15px 15px 15px 15px;
