--- a/CSS/words_style.css
+++ b/CSS/words_style.css
@@ -73,7 +73,6 @@ input {
   outline: none;
   border: none;
 }
-
 textarea {
   outline: none;
   border: none;
@@ -81,4 +80,9 @@ textarea {
 
 textarea:focus, input:focus {
   border-color: transparent !important;
+}
+button {
+  outline: none !important;
+  border: none;
+  background: transparent;
 }
