--- a/CSS/admin_style.css
+++ b/CSS/admin_style.css
@@ -1,23 +1,13 @@
 .wrapper { 
   padding-top:25px;
   display: grid; 
-  grid-template-columns: repeat(2, 1fr); 
-  grid-template-columns: 450px 800px;
+  grid-template-columns: repeat(1, 1fr); 
+  grid-template-columns: 800px;
   grid-column-gap: 60px;
   justify-content: center;
    
 } 
-.profile {
-  margin-top: 30px;
-  background: #fff;
-  border-radius: 15px 15px 15px 15px;
-  height: 650px;
-  width: 450px;
-  float: left;
-   }
-.forma {
-    margin-left: 90px;
-}
+
 .settings {
   margin-top: 5px;
   background: #fff;
@@ -33,8 +23,7 @@
   font-size: 23px;
   text-align: left;
   color: #C3BCBC;
-  margin-bottom:0px;
-  padding-bottom:0px; 
+  margin-bottom: 10px;
 }
 .text {
   width: 100%;
