--- a/CSS/progress_style.css
+++ b/CSS/progress_style.css
@@ -8,9 +8,9 @@
   font-size: 25px;
   text-align: left;
   color: #C3BCBC;
-  margin-left: 25px;
   margin-bottom:0px;
   padding-bottom:0px;  
+  text-align: center;
 }
 .wrapper { 
    padding-top:25px;
@@ -54,6 +54,21 @@
   font-size: 18px;
   color: #C3BCBC;
 }
+.icon {
+    height: 90px;
+    width: 90px;
+    margin-left:180px;
+}
+.test {
+  width: 100%;
+  padding:0px;
+  font-family: Arial;
+  font-size: 22px;
+  color: #C3BCBC;  
+  margin-bottom:20px;
+  margin-top:2px;
+  margin-left:20px;
+}
 .text {
   width: 100%;
   display: block;
@@ -85,6 +100,11 @@
 input {
   outline: none;
   border: none;
+}
+.blockSec {
+   margin-left: 180px;
+   margin-top: 30px;
+   margin-bottom:30px;
 }
 
 textarea {
